--- a/index.html
+++ b/index.html
@@ -4,9 +4,92 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>invariant</title>
+    <title>Invariant Accounting</title>
+    <style>
+      /* Critical inline styles to prevent white flash */
+      * {
+        margin: 0;
+        padding: 0;
+        box-sizing: border-box;
+      }
+      
+      html, body {
+        width: 100%;
+        height: 100%;
+        background-color: #f5f5f5;
+        overflow: hidden;
+      }
+
+      /* Splash screen styles */
+      #splash-screen {
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background-color: #f5f5f5;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        z-index: 9999;
+        opacity: 1;
+        transition: opacity 0.3s ease-out;
+      }
+
+      #splash-screen.fade-out {
+        opacity: 0;
+        pointer-events: none;
+      }
+
+      #splash-screen .splash-icon {
+        width: 120px;
+        height: 120px;
+        margin-bottom: 24px;
+        background-image: url('/src-tauri/icons/icon.png');
+        background-size: contain;
+        background-repeat: no-repeat;
+        background-position: center;
+        animation: pulse 2s ease-in-out infinite;
+      }
+
+      #splash-screen .splash-title {
+        font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, sans-serif;
+        font-size: 32px;
+        font-weight: 600;
+        color: #2c3e50;
+        margin-bottom: 8px;
+        letter-spacing: -0.5px;
+      }
+
+      #splash-screen .splash-subtitle {
+        font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, sans-serif;
+        font-size: 16px;
+        font-weight: 400;
+        color: #7f8c8d;
+      }
+
+      @keyframes pulse {
+        0%, 100% {
+          opacity: 1;
+          transform: scale(1);
+        }
+        50% {
+          opacity: 0.8;
+          transform: scale(0.98);
+        }
+      }
+    </style>
   </head>
   <body>
+    <!-- Splash screen -->
+    <div id="splash-screen">
+      <div class="splash-icon"></div>
+      <div class="splash-title">Invariant</div>
+      <div class="splash-subtitle">Accounting</div>
+    </div>
+
+    <!-- Main app container -->
     <div id="app"></div>
     <script type="module" src="/src/main.ts"></script>
   </body>
